--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "bootstrap-icons": "^1.10.5",
     "ionicons": "^7.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
